syntax = "proto3";

option csharp_namespace = "eBid.Auction.API.GRPC";

service GrpcAuction {
  rpc GetAuction (GetAuctionRequest) returns (GrpcAuctionResponse);
}

message GetAuctionRequest {
  int32 id = 1;
}

message GrpcAuctionModel {
  int32 id = 1;
  string seller = 2;
  string auctionEnd = 3;
  string startingPrice = 4;
}

message GrpcAuctionResponse {
  GrpcAuctionModel auction = 1;
}